# adobe-cc-font-extractor

./: .gitignore  README.md  adobe-cc-font-extractor.py  pyproject.toml  requirements.txt
adobe_cc_font_extractor/: main.py
